# UCV_ATE_SI_LAB04

./: README.md  sonar-project.properties
.sonarlint/: connectedMode.json
lab4_api_cv/: pyproject.toml
lab4_api_cv/src/lab4_api_cv/api/: main.py
lab4_api_cv/src/lab4_api_cv/services/: image_service.py
